# local-finance

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/routers/: categories.py  extract.py  uploads.py
backend/app/services/: classification.py  extraction.py
backend/scripts/: backfill_bboxes.py  seed_categories.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/categories/: page.tsx
frontend/src/app/statements/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/app/uploads/[id]/: page.tsx
frontend/src/app/uploads/[id]/reupload/: page.tsx
frontend/src/app/uploads/[id]/review/: page.tsx
frontend/src/components/: category-picker.tsx  extraction-result-table.tsx  loading-screen.tsx  pdf-page-image.tsx  pdf-viewer.tsx  privacy-toggle.tsx  privacy-value.tsx  sidebar.tsx  theme-toggle.tsx  upload-dropzone.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  table.tsx
frontend/src/lib/: api.ts  export.ts  privacy-context.tsx  reporting.ts  types.ts  utils.ts
nginx/: nginx.conf  nginx.conf.template  nginx.dev.conf
postgres/: init.sql
postgres/migrations/: 001_add_bbox.sql  002_balance_dedup_hash.sql  003_category_reporting_rule.sql
scripts/: backup.sh  restore.sh
