[project]
name = "local-finance-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "docling>=2.15.0",
    "ollama>=0.4.4",
    "pypdfium2>=4.30.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "python-dateutil>=2.9.0",
    # DB (used from M3 onwards)
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
